<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoPrincipal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Visor_de_Fondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ciudad_hz" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="612dp"
        android:gravity="center"
        android:text="@string/titulo"
        android:textColor="@color/white"
        android:textSize="75sp"
        android:textStyle="bold"
        android:shadowColor="@color/negro_transparente"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Visor_de_Fondo"
        app:layout_constraintVertical_bias="0.923" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/subTitulo"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:shadowColor="@color/negro_transparente"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="5"
        app:layout_constraintBottom_toBottomOf="@+id/Visor_de_Fondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        app:layout_wrapBehaviorInParent="vertical_only" />

    <Button
        android:id="@+id/btnEmpezar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/celeste"
        android:text="@string/empecemos"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="16dp"
        android:shadowColor="@color/azul03"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>